Add hedging (edging) support to BacktestEngine
BREAKING CHANGE: Opposite-side non-closeOnly MARKET/STOP/LIMIT orders now
create new hedge positions instead of closing existing ones — matching
OANDA's hedgingEnabled=true behavior.

Changes:
- BacktestEngine: Map<String,Position> → Map<String,List<Position>>,
  enabling simultaneous long + short positions per symbol
- closeOnly orders (Order.closeOnly()) reduce opposite-side positions
  (OANDA REDUCE_ONLY semantics), never open new ones
- Same-side orders continue to scale in via addQuantity()
- Opposite-side non-closeOnly orders create independent hedge positions
- SL/TP, equity, and trade accounting iterate all positions per symbol

Test changes:
- Updated buyThenSell/sellThenBuy tests: now produce 2 trades (hedge)
- Updated alternatingRoundTrips test: same-side scales in, 1 pos per side
- Added 6 new edging-specific tests: closeOnly reduce, closeOnly no-op,
  long/short coexistence, SL on hedge, independent per-side stops

Impact: 45 existing strategies with .closeOnly() exit unchanged. Strategies
that relied on opposite-side orders closing positions without closeOnly()
will now produce different backtest results — matching OANDA live behavior.